--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-svg-symbols": "^2.0.2",
     "gulp-uglify": "^3.0.0",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
